tests/cases/error/error_missing_include_level_2.out
error: Error while evaluating INCLUDE
 --> tests/cases/error/error_missing_include_level_2.rapt:2:1
  |
1 | # line 1
2 | INCLUDE error_missing_include
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ (included here)
3 | # line 3
4 |
  |
error: Error while loading source file
 --> tests/cases/error/error_missing_include.rinc:2:1
  |
1 | # line 1
2 | INCLUDE missing_file
  | ^^^^^^^^^^^^^^^^^^^^ Could not open [tests/cases/error/missing_file.rinc]: No such file or directory (os error 2)
3 | # line 3
4 |
  |
